--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <section class="max-w-4xl mx-auto px-4 py-10">
     <h2 class="text-2xl font-semibold text-indigo-600 mb-4">About Me</h2>
     <p class="text-gray-700 text-lg">
-      Hello! I'm Yash, a passionate frontend developer who enjoys building modern and clean user interfaces. I focus on creating responsive websites and continuously learning new technologies.
+      Hello! I'm Yash, a passionate opertions exective. I focus on creating responsive websites and continuously learning new technologies.
     </p>
   </section>
 
